Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66708

tst_QWidget::saveRestoreGeometry is flaky

XMLWordPrintable

      tst_QWidget::saveRestoreGeometry is flaky in CI on openSUSE 42.3. It is blacklisted on Ubuntu, so has been deemed flaky there already.

      Example failure (extra qWarnings added to help):

      ********* Start testing of tst_QWidget *********
      Config: Using QtTest library 5.11.0, Qt 5.11.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 7.2.1 20171005 [gcc-7-branch revision 253439])
      PASS   : tst_QWidget::initTestCase()
      QWARN  : tst_QWidget::saveRestoreGeometry() Restore full, pre full geometry: QRect(100,100 200x200)
      QWARN  : tst_QWidget::saveRestoreGeometry() Restore full, post full geometry: QRect(0,0 1280x768)
      QWARN  : tst_QWidget::saveRestoreGeometry() Restore full, post restore geometry: QRect(100,100 200x200)
      QWARN  : tst_QWidget::saveRestoreGeometry() Restore full, post restore and wait geometry: QRect(104,129 200x200)
      FAIL!  : tst_QWidget::saveRestoreGeometry() Compared values are not the same
         Actual   (((widget.geometry()))): QRect(104,129 200x200) (bottomright 303,328)
         Expected (geom)                 : QRect(100,100 200x200) (bottomright 299,299)
         Loc: [tst_qwidget.cpp(3267)]
      PASS   : tst_QWidget::cleanupTestCase()
      Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 15998ms
      ********* Finished testing of tst_QWidget *********
      

      Example success with same extra info:

      ********* Start testing of tst_QWidget *********
      Config: Using QtTest library 5.11.0, Qt 5.11.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 7.2.1 20171005 [gcc-7-branch revision 253439])
      PASS   : tst_QWidget::initTestCase()
      QWARN  : tst_QWidget::saveRestoreGeometry() Restore full, pre full geometry: QRect(104,129 200x200)
      QWARN  : tst_QWidget::saveRestoreGeometry() Restore full, post full geometry: QRect(0,0 1280x768)
      QWARN  : tst_QWidget::saveRestoreGeometry() Restore full, post restore geometry: QRect(100,100 200x200)
      QWARN  : tst_QWidget::saveRestoreGeometry() Restore full, post restore and wait geometry: QRect(104,129 200x200)
      PASS   : tst_QWidget::saveRestoreGeometry()
      PASS   : tst_QWidget::cleanupTestCase()
      Totals: 3 passed, 0 failed, 0 skipped, 0 blacklisted, 4926ms
      ********* Finished testing of tst_QWidget *********
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paeglis Gatis Paeglis
            kari.oikarinen Kari Oikarinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes